Fixing modal on mobile

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -1,4 +1,4 @@
-section.main_section { margin: 50px; }
+section.main_section { margin: 50px 0 0 10px; }
 
 body{
 	color:#3c3c3c;
