--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -35,12 +35,6 @@
 	background: linear-gradient(to bottom,  rgba(138,138,136,1) 0%,rgba(86,86,84,1) 100%);
 }
 
-#main #header .btn-navbar {
-	min-width: 20px;
-	min-height: 15px;
-	margin: 20px 40px 0 0;
-}
-
 .btns{
 	padding:0;
 	margin:0;
