--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,5 +1,6 @@
 #footer{
 	width:100%;
+	min-width:1000px;
 	background:#323233 url(new_design/bg-nav.png);
 }
 #footer .logo{
