--- a/app/assets/stylesheets/workout_exercise_list.css.scss
+++ b/app/assets/stylesheets/workout_exercise_list.css.scss
@@ -37,7 +37,7 @@ li.workout_exercise { padding: 10px !important; }
 
 .exercise-list .number.first { margin: 0; }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 767px) {
 	.exercise-list .number.first {
 		margin: 25px 0 0 0;
 
